Hidden - Greenfoot game/Hidden Project/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\Greenfoot\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-protected
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\Greenfoot\lib\extensions\greenfoot.jar;C:\Program Files (x86)\Greenfoot\lib\bluejcore.jar;C:\Program Files (x86)\Greenfoot\lib\bluejeditor.jar;C:\Program Files (x86)\Greenfoot\lib\bluejext.jar;C:\Program Files (x86)\Greenfoot\lib\AppleJavaExtensions.jar;C:\Program Files (x86)\Greenfoot\lib\junit-4.11.jar;C:\Program Files (x86)\Greenfoot\lib\hamcrest-core-1.3.jar;C:\Program Files (x86)\Greenfoot\lib\bluej.jar;C:\Program Files (x86)\Greenfoot\lib\diffutils-1.2.1.jar;C:\Program Files (x86)\Greenfoot\lib\commons-logging-api-1.1.2.jar;C:\Program Files (x86)\Greenfoot\lib\jl1.0.1.jar;C:\Program Files (x86)\Greenfoot\lib\opencsv-2.3.jar;C:\Program Files (x86)\Greenfoot\lib\xom-1.2.9.jar;C:\Program Files (x86)\Greenfoot\lib\lang-stride.jar;C:\Program Files (x86)\Greenfoot\lib\nsmenufx-2.1.4.jar;C:\Program Files (x86)\Greenfoot\lib\richtextfx-fat-0.9.0.jar;C:\Program Files (x86)\Greenfoot\lib\guava-17.0.jar;C:\Program Files (x86)\Greenfoot\lib\javassist-3.18.0.jar;C:\Program Files (x86)\Greenfoot\lib\commons-vfs2-2.0.jar;C:\Program Files (x86)\Greenfoot\lib\httpclient-4.1.1.jar;C:\Program Files (x86)\Greenfoot\lib\httpcore-4.1.jar;C:\Program Files (x86)\Greenfoot\lib\httpmime-4.1.1.jar;D:\Laptop Serj\Alte Proiecte\Hidden
-d
D:\Laptop Serj\Alte Proiecte\Hidden\doc
-encoding
UTF-8
-charset
UTF-8
D:\Laptop Serj\Alte Proiecte\Hidden\Bezna-temp.java
<---- end of javadoc command ---->
Loading source file D:\Laptop Serj\Alte Proiecte\Hidden\Bezna-temp.java...
Constructing Javadoc information...
D:\Laptop Serj\Alte Proiecte\Hidden\Bezna-temp.java:3: error: class Bezna is public, should be declared in a file named Bezna.java
public class Bezna extends Etaj2_Room2
       ^
warning: unknown enum constant Tag.Any
  reason: class file for threadchecker.Tag not found
warning: unknown enum constant Tag.Any
Standard Doclet version 1.8.0_181
Building tree for all the packages and classes...
Generating D:\Laptop Serj\Alte Proiecte\Hidden\doc\Bezna.html...
warning: unknown enum constant Tag.Simulation
warning: unknown enum constant Tag.Simulation
Generating D:\Laptop Serj\Alte Proiecte\Hidden\doc\package-frame.html...
Generating D:\Laptop Serj\Alte Proiecte\Hidden\doc\package-summary.html...
Generating D:\Laptop Serj\Alte Proiecte\Hidden\doc\constant-values.html...
Building index for all the packages and classes...
Building index for all classes...
Generating D:\Laptop Serj\Alte Proiecte\Hidden\doc\allclasses-frame.html...
Generating D:\Laptop Serj\Alte Proiecte\Hidden\doc\allclasses-noframe.html...
Generating D:\Laptop Serj\Alte Proiecte\Hidden\doc\index.html...
5 warnings
